espero que esta vez si

--- a/styles/_resultados-busqueda.scss
+++ b/styles/_resultados-busqueda.scss
@@ -3,20 +3,24 @@
     top: 391px;
     display: none;
     width: 1220px;
-    height: 1025px;
+    height: fit-content;
     left: 92px;
     background: #FFF4FD;
     z-index: 2;
     overflow: hidden;
-    text-align: center;
+    grid-gap: 10px;
+    grid-template-columns: 298px 298px 298px 298px;
+    grid-auto-flow: row dense;
     .div-resultado{
         display: inline-block;
-        height: 238px;
-        margin: 8px;
+        height: 298px;
         outline: 4px;
         outline-offset: -4px;
         outline-color: #FFF4FD; 
         overflow: hidden;  
+        img{
+            width: 100%;
+        }
         .hashtags-resultado{
             display: none;
             position: relative;
