--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -4,6 +4,7 @@
     border: 0;
 }
 body{
+    background-color: #FFF4FD;
     &.modoClaro{
     background-color: #FFF4FD;
     transition: .3s ease all;
