--- a/styles/_resultados-busqueda.scss
+++ b/styles/_resultados-busqueda.scss
@@ -56,7 +56,7 @@
         background: #110038;
     }
     .gif-resultado{
-        margin: 8px;
+        width: 100%;
     }
 }
 .contenedor-busqueda-previa{
