--- a/styles/_sugerencias-tendencias.scss
+++ b/styles/_sugerencias-tendencias.scss
@@ -129,7 +129,7 @@
     top: 220px;
     left: 92px;
     width: 1200px;
-    height: 950px;
+    height: fit-content;
     overflow: hidden;
     display: grid;
     grid-gap: 10px;
